--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ commands:
            name: Destroy environment
            when: on_fail
            command: |
-            echo "no action was performed to destroy environments..."
-           # aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
-           # aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-           # aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+           #echo "no action was performed to destroy environments..."
            
              
   revert-migrations:
@@ -201,7 +201,7 @@ jobs:
             cd .circleci/ansible
             ansible-playbook -i inventory.txt main.yml
             cat inventory.txt
-          #?????????????.....Empty inventory...???????????????
+          #?????????????.....Empty inventory...???????????????..........................................
       - destroy_environment     
         
   run-migrations:
@@ -296,6 +296,7 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
+          #?????????????.....Empty inventory...???????????????...................................................
       - destroy_environment 
       - revert-migrations
 
