--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,9 @@ commands:
            name: Destroy environment
            when: on_fail
            command: |
-            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
-           #aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-           #aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-           #echo "no action was performed to destroy environments..."
+            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+           #aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
            
              
   revert-migrations:
