--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,7 +198,9 @@ jobs:
           name: Run Playbook and Configure server
           command: |
             cd .circleci/ansible
-            ansible-playbook -i aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=backend" --output text >> inventory.txt main.yml
+            aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=backend" --output text >> ./.circleci/ansible/inventory.txt
+            cat ./.circleci/ansible/inventory.txt
+            ansible-playbook -i inventory.txt main.yml
             cat inventory.txt
           #?????????????.....Empty inventory...???????????????..........................................
       - destroy_environment     
@@ -293,7 +295,8 @@ jobs:
             tar -C backend -czvf artifact.tar.gz .
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
-            cat inventory.txt
+            aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=backend" --output text >> ./.circleci/ansible/inventory.txt
+            cat ./.circleci/ansible/inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
           #?????????????.....Empty inventory...???????????????...................................................
       - destroy_environment 
