--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,6 +191,7 @@ jobs:
       - run:
           name: Install Ansible & Dependensies
           command: |
+            pip3 install awscli
             apk add --update ansible
       - run:
           name: Run Playbook and Configure server
