--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,11 +1,21 @@
 ---
+- name: "update apt packages."
+  become: yes
+  apt:
+    update_cache: yes
+    
 - name: "upgrade packages."
+  become: yes
+  apt:
+    upgrade: yes
+
+- name: "remove dependencies that are no longer required."
   become: true
   apt:
-    upgrade: "yes"
+    autoremove: yes
 
 - name: "install dependencies."
-  become: true
+  become: yes
   apt:
     name: ["nodejs", "npm"]
     state: latest
@@ -18,3 +28,17 @@
     global: yes
     production: yes
     state: present
+    
+- name: create directory
+file:
+  path: ~/web
+  state: directory
+  
+- name: copy index test page
+  template:
+    src: "files/index.js"
+    dest: "~/web/index.js"
+    
+- name: Excuting node
+  shell: |
+    pm2 start ~/web/index.js -f
