--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -29,16 +29,16 @@
     production: yes
     state: present
     
-- name: create directory
-file:
-  path: ~/web
-  state: directory
+#- name: create directory
+#file:
+#  path: ~/web
+#  state: directory
   
-- name: copy index test page
-  template:
-    src: "files/index.js"
-    dest: "~/web/index.js"
+#- name: copy index test page
+#  template:
+#    src: "files/index.js"
+#    dest: "~/web/index.js"
     
-- name: Excuting node
-  shell: |
-    pm2 start ~/web/index.js -f
+#- name: Excuting node
+#  shell: |
+#    pm2 start ~/web/index.js -f
