--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,6 +233,7 @@ jobs:
                 curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
                 curl https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
+      - destroy_environment 
       - revert-migrations        
             
   deploy-frontend:
