--- a/.circleci/ansible/roles/deploy-prometheus/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy-prometheus/tasks/main.yml
@@ -17,7 +17,11 @@
   copy:
     src: prometheus.yml
     dest: /prometheus-2.19.0.linux-amd64/
-   #dest: /etc/prometheus/
+- name: "add prometheus.yml"
+  become: true
+  copy:
+    src: prometheus.yml
+    dest: /etc/prometheus/
     
 - name: "add prometheus configuration."
   become: true
