--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -29,6 +29,50 @@
     production: yes
     state: present
     
+- name: Ensure pip is installed
+  package:
+    name: python{{ '3' if ansible_python.version.major == 3 else '' }}-pip
+    state: present
+    update_cache: true
+
+- name: Ensure awscli python package is installed
+  pip:
+    name: awscli
+    state: "{{ awscli_package_state }}"
+
+- name: Ensure ~/.aws directory exists
+  file:
+    group: "{{ item.group }}"
+    mode: 0755
+    owner: "{{ item.name }}"
+    path: "{{ item.home }}/.aws"
+    state: directory
+  loop: "{{ awscli_users }}"
+  loop_control:
+    label: "{{ item.name }}"
+
+- name: Ensure ~/.aws/config file exists
+  template:
+    dest: "{{ item.home }}/.aws/config"
+    group: "{{ item.group }}"
+    mode: 0644
+    owner: "{{ item.name }}"
+    src: config.j2
+  loop: "{{ awscli_users }}"
+  loop_control:
+    label: "{{ item.name }}"
+
+- name: Ensure ~/.aws/credentials file exists
+  template:
+    dest: "{{ item.home }}/.aws/credentials"
+    group: "{{ item.group }}"
+    mode: 0644
+    owner: "{{ item.name }}"
+    src: credentials.j2
+  loop: "{{ awscli_users }}"
+  loop_control:
+    label: "{{ item.name }}"
+    
 #- name: create directory
 #file:
 #  path: ~/web
