--- a/.circleci/ansible/roles/deploy-prometheus/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy-prometheus/tasks/main.yml
@@ -69,6 +69,12 @@
     src: prometheus.yml
     dest: /etc/prometheus/
     
+- name: "add rules.yml"
+  become: true
+  copy:
+    src: rules.yml
+    dest: /prometheus-2.19.0.linux-amd64/
+    
 - name: "add prometheus configuration service"
   become: true
   copy:
