--- a/.circleci/ansible/roles/deploy-prometheus/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy-prometheus/tasks/main.yml
@@ -43,7 +43,7 @@
   loop_control:
     label: "{{ item.name }}"
     
-
+#-------------------------------------------------------------------------------------------------------------------------------------
 - name: "install prometheus."
   unarchive:
     src: https://github.com/prometheus/prometheus/releases/download/v2.19.0/prometheus-2.19.0.linux-amd64.tar.gz
@@ -54,7 +54,7 @@
   become: true
   copy:
     src: /tmp/prometheus-0.17.0.linux-amd64/prometheus
-    dest: /usr/local/bin/node_exporter
+    dest: /usr/local/bin/prometheus
     remote_src: yes
     mode: '0777'
     
@@ -69,18 +69,45 @@
     src: prometheus.yml
     dest: /etc/prometheus/
     
-- name: "add rules.yml"
+- name: "add1 rules.yml"
   become: true
   copy:
     src: rules.yml
     dest: /prometheus-2.19.0.linux-amd64/
+- name: "add2 rules.yml"
+  become: true
+  copy:
+    src: rules.yml
+    dest: /etc/prometheus/
     
 - name: "add prometheus configuration service"
   become: true
   copy:
     src: prometheus.service
     dest: /etc/systemd/system/
-
+#------------------------------------------------------------------------------------------------------
+- name: "install Alertmanager."
+  unarchive:
+    src: https://github.com/prometheus/alertmanager/releases/download/v0.21.0/alertmanager-0.21.0.linux-amd64.tar.gz
+    dest: /tmp
+    remote_src: yes
+    
+- name: "move binary to /usr/local/bin."
+  become: true
+  copy:
+    src: /tmp/alertmanager-0.21.0.linux-amd64/alertmanager
+    dest: /usr/local/bin/alertmanager
+    remote_src: yes
+    mode: '0777'
+#------------------------------------------------------------------------------------------------------
+- name: "enable alertmanager service"
+  become: true
+  systemd:
+    state: restarted
+    daemon_reload: yes
+    name: alertmanager
+    enabled: yes
+    
 - name: "enable prometheus service"
   become: true
   systemd:
