--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,32 +1,37 @@
 ---
-- name: "upgrade packages."
-  become: true
-  apt:
-    upgrade: "yes"
+- name: Run basic PowerShell script
+  ansible.windows.win_powershell:
+    script: |
+      npm install
+      pm2 stop default
+      pm2 start npm -- start
+#-----------------------------------------------------------------------------
+#- name: "upgrade packages."
+#  become: true
+#  apt:
+#    upgrade: "yes"
+#
+#- name: "install dependencies."
+#  become: true
+#  apt:
+#    name: ["nodejs","npm"]
+#    state: latest
+#    update_cache: yes
+#
+#- name: "install pm2"
+#  become: true
+#  npm:
+#    name: pm2
+#    global: yes
+#    production: yes
+#    state: present
+#    
+#- name: "install curl"
+#  become: true
+#  apk:
+#    name: curl
+#    global: yes
+#    production: yes
+#    state: present   
 
-- name: "install dependencies."
-  become: true
-  apt:
-    name: ["nodejs","npm"]
-    state: latest
-    update_cache: yes
 
-- name: "install pm2"
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
-    
-- name: "install curl"
-  become: true
-  apk:
-    name: curl
-    global: yes
-    production: yes
-    state: present   
-#---
-#npm install
-#pm2 stop default
-#pm2 start npm -- start
