--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              --tags project=udapeople
+              --tags project=udapeople --region us-east-1
       - run:
           name: Ensure prometheus infrastructure exists
           no_output_timeout: 30m
@@ -162,7 +162,7 @@ jobs:
               --template-file .circleci/files/prometheus.yml \
               --stack-name "prometheus-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              --tags project=prometheus
+              --tags project=prometheus --region us-east-1
       - run:
           name: Ensure front-end infrastructure exist
           no_output_timeout: 30m
@@ -171,7 +171,7 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              --tags project=udapeople
+              --tags project=udapeople --region us-east-1
       - run:
           when: on_fail
           command: |
@@ -379,7 +379,7 @@ jobs:
             --template-file .circleci/files/cloudfront.yml \
             --stack-name InitialStack \
             --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --tags project=udapeople
+            --tags project=udapeople --region us-east-1
       - destroy_environment 
       - revert-migrations
 
