--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,14 +143,14 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - run:
-          name: aws configure
-          no_output_timeout: 30m
-          command: |
-            aws configure
-            aws_access_key_id = AKIAQD4X2AMHZT2RKV5I
-            aws_secret_access_key = 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
-            region = us-east-1
+      #- run:
+      #    name: run this on terminal
+      #    no_output_timeout: 30m
+      #    command: |
+      #      aws configure
+      #      aws_access_key_id = AKIAQD4X2AMHZT2RKV5I
+      #      aws_secret_access_key = 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
+      #      region = us-east-1
       - run:
           name: Ensure back-end infrastructure exists
           no_output_timeout: 30m
