--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,7 +146,7 @@ jobs:
       - run:
           name: run this on terminal
           command: |
-            aws configure import --csv file://C:\Users\Maro\Pictures\udapeople\new_user_credentials_1.csv
+            aws configure import --csv file://.circleci/files/credentials1.csv
       - run:
           name: Ensure back-end infrastructure exists
           no_output_timeout: 30m
